--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,14 @@ main .pesan {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-@media only screen and (max-width: 780px) {
+
+
+@media only screen and (max-width: 650px) {
     header {
-        height:50vh;
-        background-size: 30vh;
+        font-size:1em;
+        background-size: 20vh;
+    }
+    main .pesan span {
+        padding:15px;
     }
 }
