--- a/css/style.css
+++ b/css/style.css
@@ -1,88 +1,67 @@
 * {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background:#333;
-    background-image: url(../img/bg-body.png);
+	display: grid;
+	justify-content: center;
+	margin-top: 50px;
+	height: 100vh;
 }
+
+.content-main {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr;
+    width: 300px;
+    height: 300px;
+}
+
 header {
-    width: 100vw;
-    background:#1e4757;
-    height:50vh;
-    background-image: url(../img/bg.png);
-    background-size: 40vh;
-    background-repeat: no-repeat;
-    background-position: right bottom;
     display: flex;
     justify-content: center;
-    align-content: center;
-    flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
-}
-
-header .counter {
-    width:200px;
-    min-height:50px;
-    background-color:white !important;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 30px;
-    font-size:1.5em;
-}
-
-header .button {
-    margin-top:6vh;
-}
-
-header .button button {
-    padding:2px 10px;
-    width:40px;
-    height:40px;
-    border:none;
-    border-radius:50%;
-    font-size:1.2em;
-    margin:2px;
-    transition: 0.5s;
-}
-
-header .button button:hover {
-    background-color: #1e4757;
-    color:white;
-    border:1px solid white;
-}
-
-header .button button:active{
-    transform:scale(0.5);
-}
-
-main .pesan {
-    color:white;
-    display:flex;
-    justify-content: center;
-    font-size:1.5em;
-    margin:20px;
-    align-content: center;
     text-align: center;
-    min-height:10vh;
-    align-items: center;
-    background:#1e4757;
-    opacity:0.9;
-    border-radius: 30px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    border: 1px solid;
+    padding: 20px;
+
+    border: 1px solid #333;
 }
 
+.number {
+    padding: 10px 40px;
+    border-top-right-radius: 2em;
+    border-top-left-radius: 2em;
+    border-bottom-right-radius: 2em;
+    border-bottom-left-radius: 2em;
+}
 
+figure {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #333;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+}
 
-@media only screen and (max-width: 650px) {
-    header {
-        font-size:1em;
-        background-size: 20vh;
-    }
-    main .pesan span {
-        padding:15px;
-    }
+.main-counter {
+    text-align: center;
+    font-size: 40px;
+}
+
+.main-action {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.main-button__minus,
+.main-button__plus {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border-style: none;
+    font-size: 100%;
 }
