--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,18 @@ body {
 	justify-content: center;
 	margin-top: 50px;
 	height: 100vh;
+    background-image: url(../img/bg-body.png);
 }
 
 .content-main {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr;
-    width: 300px;
-    height: 300px;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr 2fr;
+	width: 300px;
+	height: 300px;
+	background-color: #fff;
+	background-image: url(../img/bg.png);
+	background-position-x: 0;
 }
 
 header {
@@ -31,37 +35,51 @@ header {
 }
 
 .number {
-    padding: 10px 40px;
-    border-top-right-radius: 2em;
-    border-top-left-radius: 2em;
-    border-bottom-right-radius: 2em;
-    border-bottom-left-radius: 2em;
+	padding: 10px 40px;
+	border-top-right-radius: 2em;
+	border-top-left-radius: 2em;
+	border-bottom-right-radius: 2em;
+	border-bottom-left-radius: 2em;
+	background: rgba(0,0,0,0.5);
+	color: #fff;
 }
 
 figure {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #333;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	border: 1px solid #333;
+	flex-direction: column;
 }
 
 .main-counter {
-    text-align: center;
-    font-size: 40px;
+	text-align: center;
+	width: 150px;
+	height: 50px;
+	border: 1px solid #333;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #fff;
+}
+
+.main-counter h1 {
+	text-shadow: 2px 2px 1px #fff;
+	width: 100%;
 }
 
 .main-action {
-    display: flex;
-    justify-content: space-evenly;
+	display: flex;
+	justify-content: space-evenly;
+	width: 80%;
 }
 
-.main-button__minus,
-.main-button__plus {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border-style: none;
-    font-size: 100%;
+.main-button__minus, .main-button__plus {
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	font-size: 100%;
+	background-color: #fff;
+	border: 1px solid #333;
+	color: #333;
 }
